--- a/.github/workflows/generatepuzzle.yml
+++ b/.github/workflows/generatepuzzle.yml
@@ -3,7 +3,7 @@ name: Open URL at Midnight
 on:
   schedule:
     - cron: '0 0 * * *' # This cron expression represents midnight GMT (0 0 * * *)
-    - cron: '0 5 * * *' # 5 AM GMT (0 5 * * *)
+    - cron: '0 4 * * *' # 5 AM GMT (0 5 * * *)
 
 jobs:
   open-url:
@@ -13,3 +13,5 @@ jobs:
         uses: wei/curl@master # Use an existing action to open URLs
         with:
           url: 'https://facets.bigtentgames.com/generate.html?generated=true'
+      - name: Wait for 2 minutes
+        run: sleep 120
