--- a/.github/workflows/generatepuzzle.yml
+++ b/.github/workflows/generatepuzzle.yml
@@ -3,7 +3,7 @@ name: Open URL at Midnight
 on:
   schedule:
     - cron: '0 0 * * *' # This cron expression represents midnight GMT (0 0 * * *)
-    - cron: '0 4 * * *' # 5 AM GMT (0 5 * * *)
+    - cron: '0 5 * * *' # 5 AM GMT (0 5 * * *)
 
 jobs:
   open-url:
@@ -15,3 +15,7 @@ jobs:
           url: 'https://facets.bigtentgames.com/generate.html?generated=true'
       - name: Wait for 2 minutes
         run: sleep 120
+      - name: Reload URL
+        run: curl 'https://facets.bigtentgames.com/generate.html?generated=true'
+      - name: Wait for 30 seconds
+        run: sleep 30
