--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "vue": "^3.5.18"
   },
   "devDependencies": {
-    "vite": "^7.1.3"
+    "vite": "^7.1.3",
+    "vite-plugin-pwa": "^1.0.3"
   },
   "scripts": {
     "dev": "vite",
