--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,9 @@ jobs:
         run: |
           TAG_NAME=${GITHUB_REF#refs/tags/}
           TAG_DESC=$(git for-each-ref refs/tags/${TAG_NAME} --format='%(contents)')
-          PAYLOAD=$(jq -n --arg content "🏷️ New tag pushed: **${TAG_NAME}**\n📝 Description: ${TAG_DESC}" '{content: $content}')
+          CONTENT="🏷️ New tag pushed: **${TAG_NAME}**
+          Description: ${TAG_DESC}"
+          PAYLOAD=$(jq -n --arg content "$CONTENT" '{content: $content}')
           curl -H "Content-Type: application/json" \
             -d "$PAYLOAD" \
             "${{ secrets.DISCORD_WEBHOOK_URL }}"
